force-app/main/default/objects/Opportunity2__c/Opportunity2__c.object-meta.xml
<CustomObject>
    <label>Opportunity2</label>
    <nameField>
        <label>NewOpp Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opportunity2</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>