force-app/main/default/objects/Opportunity2__c/fields/Opportunity_Id__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Id__c</fullName>
    <displayFormat>JO-{0000000}</displayFormat>
    <label>Opportunity Id</label>
    <type>AutoNumber</type>
</CustomField>