force-app/main/default/objects/Opportunity2__c/fields/Opportunity_Manager__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Manager__c</fullName>
    <label>Opportunity Manager</label>
    <length>255</length>
    <type>Text</type>
</CustomField>