force-app/main/default/objects/Opportunity2__c/fields/Opportunity_Partner__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Partner__c</fullName>
    <label>Opportunity Partner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>