force-app/main/default/objects/Opportunity2__c/fields/Sale_Stage__c.field-meta.xml
<CustomField>
    <fullName>Sale_Stage__c</fullName>
    <label>Sale Stage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>