force-app/main/default/objects/Opportunity2__c/fields/Service_Area__c.field-meta.xml
<CustomField>
    <fullName>Service_Area__c</fullName>
    <label>Service Area</label>
    <length>255</length>
    <type>Text</type>
</CustomField>